--- a/CSShtml.html
+++ b/CSShtml.html
@@ -19,7 +19,6 @@ Mozme ho pouzit v 3 formach - 1.style atribut vo vnutri HTML
             p{font-size: xx-large;}
 
         </style>
-        </head>
         <body>
             <!-- Inline CSS 1.pripad - inline -->
             <h1 style="color: brown;">Nadpis CSS 1.case</h1>
@@ -29,4 +28,6 @@ Mozme ho pouzit v 3 formach - 1.style atribut vo vnutri HTML
             <q>3 pripad</q>
             <i>3 pripad</i>
         </body>
+        sfsdfaegrtahtdtth
+    </head>
 </html>
